dim/spec/test_input/invalid_input/category_array.dim
Config:
  - originator: CompanyName
    files: abc
    category:
        - module
        - system
